# AFL-agent

./: .gitignore  README.md  add_colab_badges.py  docker-compose.yaml  docs.yml  env-testing.yml  env.yml  index.html  pyproject.toml  requirements.txt  requirements_sphinx820.txt  setup.py  test_dataset_loading.py
.github/: codecov.yml
.github/actions/: docs4nist.yml
.github/workflows/: docs.yml  integration_tests.yml  publish-to-ghcr.yaml  publish_docs.yml  publish_pypi.yml  test-integration.yaml  tests.yml
AFL/agent/: 220706-DowShampoo-SampleDriver.py  AL_SampleDriver.py  AcquisitionFunction.py  AgentClient.py  DowShampoo_SampleDriver.py  EI_AcquisitionFunction.py  GaussianProcess.py  HscedGaussianProcess.py  Metric.py  Multimodal_AL_SampleDriver.py  Multimodal_AgentDriver.py  PhaseLabeler.py  PhaseMap.py  SANS_AL_SampleDriver.py  SAS_AL_SampleDriver.py  SAS_AgentDriver.py  SAS_Grid_AL_SampleDriver.py  SAXS_AL_SampleDriver.py  UCB_AcquisitionFunction.py  reduce_usaxs.py  util.py  vSAS_NoDeck_AL_SampleDriver.py  xarray_extensions.py
AFL/agent/virtual_AL/: Virtual_MultiModal_AL_SampleDriver.py  Virtual_MultiModal_AgentDriver.py  vSAS_AL_SampleDriver.py  vSAS_AgentDriver.py
AFL/agent/widgets/: ALPlot.py  DiffractionLabeler.py  MPLDiffractionLabeler.py
AFL/double_agent/: AcquisitionFunction.py  AgentClient.py  AgentDriver.py  AgentWebAppMixin.py  AmplitudePhaseDistance.py  AutoSAS.py  AutoSASWebAppMixin.py  AutoSASWidget.py  AutoSAS_Driver.py  Boundary.py  Context.py  ContextManager.py  Cost.py  DatasetBuilderDriver.py  ExampleTypedOp.py  Extrapolator.py  GPyTorchExtrapolator.py  Generator.py  Graph.py  Labeler.py  MaskGrid.py  PairMetric.py  PhaseLabeler.py  Pipeline.py  PipelineContext.py  PipelineOp.py  Preprocessing.py  Preprocessor.py  PyTorchExtrapolator.py  QueryStrategy.py  SASFitter_Driver.py  SAS_model_fit_driver.py  SASfit.py  TensorFlowExtrapolator.py  TreeHierarchy.py  TreePipeline.py  Utility.py  __init__.py  _automation_compat.py  _version.py  (+5 more)
AFL/double_agent/data/: README.md  __init__.py  classification_pipeline.json  classification_pipeline_log.json  example_tree_structure.json  reference_predictions.nc  synthetic_sans.nc
AFL/double_agent/dataset_plugins/: __init__.py  numpy_loader.py  pandas_loader.py  sasmodels_loader.py  xarray_loader.py
AFL/double_agent/datasets/: __init__.py
AFL/double_agent/driver_templates/: autosas_builder.html  layout.js  network.js  pipeline_builder.html  ui.js
AFL/double_agent/prefab/: __init__.py  find_boundaries.json  preprocess.json  similarity_clustering.json
AFL_agent/: _version.py
_includes/: ntd2d_variants.html
docker/: Dockerfile.agent
docker/config/: agent-config.json
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/data/: example_dataset.nc
docs/source/explanations/: context_manager.rst  index.rst  pipelines.rst
docs/source/how-to/: appending.ipynb  appending_data_to_xarray_datasets.ipynb  appending_data_to_xarray_datasets.rst  appending_to_xarray.rst  autosas_modal_selection.ipynb  (+7 more)
en/23-documentation-improvements-v2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/2503_USAXS/: objects.inv
en/2602_ORNL/: genindex.html
en/2603_APS_12IDB/: figure_12.html
en/2603_ORNL/: genindex.html  searchindex.js
en/27-localizing-autosas/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
en/28-plotting/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/36-test-suite/: genindex.html
en/39-autosas_model_selection_broke/: .buildinfo
en/add-docs-concurrency-limit/: objects.inv
en/autosas_web_ui/: figure_34.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
en/bugfix_pipeline_builder/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/dependabot_pip_h11-0.16.0/: genindex.html  index.html  py-modindex.html  searchindex.js
en/dependabot_pip_requests-2.32.4/: searchindex.js
en/feat-autosas-widget/: objects.inv  py-modindex.html  searchindex.js
en/feat-json-serialization/: index.html  objects.inv
en/latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/main/: genindex.html  index.html  objects.inv  searchindex.js
en/martintb-patch-2/: objects.inv
en/martintb-patch-3/: genindex.html  index.html
en/pipeline_builder_upgrades/: genindex.html  objects.inv  searchindex.js
en/refactor-pipeline-drawing/: searchindex.js
en/stable/: objects.inv
en/v1.1.0/: genindex.html
en/v1.2.0/: searchindex.js
en/v1.3.1/: figure_10.html
en/v1.5.0/: search.html
en/v1.6.0/: searchindex.js
en/v1.8.0/: objects.inv
server_scripts/: AutoSAS_Server.py  AutoSAS_Server.sh  Double_Agent.py  Double_Agent.sh  Multimodal_Agent.py  Multimodal_Agent.sh  SAS_Agent.py  SAS_Agent.sh  SAS_fitting_agent.py  SAS_fitting_agent.sh  SampleServer_AL_Multimodal.py  SampleServer_AL_Multimodal.sh  SampleServer_AL_SANS.py  SampleServer_AL_SANS.sh  SampleServer_AL_SAS.py  SampleServer_AL_SAS.sh  SampleServer_AL_SAS_Grid.py  SampleServer_AL_SAS_Grid.sh  SampleServer_AL_SAXS.py  SampleServer_AL_SAXS.sh  SampleServer_AL_noDeck_vSAS.py  SampleServer_AL_noDeck_vSAS.sh  double_SAS_fitting_agent.py  double_SAS_fitting_agent.sh
server_scripts/virtual_instrument/: VirtualMultiModal_Agent.py  VirtualMultiModal_Agent.sh  VirtualUnimodal_Agent.py  VirtualUnimodal_Agent.sh  Virtual_Multimodal_SampleServer.py  Virtual_Multimodal_SampleServer.sh  Virtual_Unimodal_SampleServer.py  Virtual_Unimodal_SampleServer.sh
tests/: README.md  conftest.py  test_agentdriver_pipeline_ops.py  test_classifier_pipeline.py  test_cost.py  test_data.py  test_extrapolator.py  test_graph_ops.py  test_membership_probability.py  test_pipeline_integrated.py  test_pipeline_op.py  test_pipeline_unit.py  test_preprocessor.py  test_pytorch.py  test_query_strategy.py  test_tree_pipeline.py  test_utility.py  utils.py
tests/data/: example1_clustering_result.nc
(+654 files in other folders)
