[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "AFL/double_agent/_version.py"

[tool.hatch.metadata]
allow-direct-references=true

[project]
name = "AFL-agent"
dynamic = ["version"]
description = "Agent code for the Autonomous Formulation Lab"
readme = "README.md"
authors = [
    { name = "Tyler B. Martin", email = "tyler.martin@nist.gov" },
    { name = "Peter A. Beaucage" },
    { name = "Duncan R. Sutherland" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "xarray",
    "tqdm",
    "netcdf4",
    "pandas",
    "scipy",
    "matplotlib",
    "plotly",
    "kaleido",
    "seaborn",
    "pint",
    "periodictable",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "bottleneck",
    "shapely",
    "sympy",
    "tiled[all]",
    "sasmodels",
    "sasdata",
    "bumps",
    "mpltern",
    "anywidget",
    "zeroconf",
    "pyepics"
]

[project.optional-dependencies]
jupyter = [
    "jupyter",
    "jupyterlab",
    "ipywidgets",
    "ipympl",
    "nodejs",
]

graph = [
    "pygraphviz"
]

tensorflow = [
    "tensorflow>=2.7",
    "gpflow",
]

pytorch = [
    "torch",
    "torchvision",
]

apdist = [
    "apdist @ git+https://github.com/kiranvad/Amplitude-Phase-Distance"
]

automation = [
    "flask<2.3",  # before_first request is removed in 2.3
    "flask-jwt-extended>=4.0",
    "flask_cors",
    "watchdog",
    "markupsafe",
    "pyserial",
    "bokeh",
    "requests",
]

dev = [
    "black",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-napoleon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-autosummary-accessors",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "hypothesis",
    "coverage",
    "nbsphinx",
]

all = [
    "jupyter",
    "jupyterlab", 
    "ipywidgets",
    "ipympl",
    "nodejs",
    # "pygraphviz", #leave out, breaks documentation build
    "tensorflow>=2.7",
    "gpflow",
    "torch",
    "torchvision",
    "flask<2.3",
    "flask-jwt-extended>=4.0", 
    "flask_cors",
    "watchdog",
    "markupsafe",
    "pyserial",
    "bokeh",
    "requests",
    "black",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-napoleon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-autosummary-accessors",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "hypothesis",
    "coverage",
    "nbsphinx",
]

[tool.hatch.build]
packages = ["AFL"]
include-package-data = true
include = [
    "AFL/double_agent/prefab/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["AFL"]

[tool.hatch.build.targets.sdist]
packages = ["AFL"]

[tool.coverage.run]
source = ["AFL.double_agent"]
omit = [
    "AFL/double_agent/_version.py",
    "AFL/double_agent/data/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Configure test discovery
addopts = " --strict-markers --cov=AFL.double_agent --cov-report=term --cov-report=html --cov-report=xml --no-cov-on-fail -v"

# Markers
markers = [
    "unit: Mark a test as a unit test",
    "integration: Mark a test as an integration test",
    "slow: Mark a test as slow (skipped by default unless --slow is passed)",
]

# Configure test timing
minversion = 6.0
xvs_time = 10
xvs_trials = 5

# Log configuration
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
